--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,25 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
+}
+
+.content {
+  padding: 1.5rem 1.5rem 0 1.5rem;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.box-actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.box-actions > i {
+  cursor: pointer;
 }
 
 @keyframes App-logo-spin {
